--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    z-index: 1;
     margin: 0;
     background-color: #000000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='380' height='380' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23641A6F' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%2324A7A9'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
@@ -16,12 +17,21 @@ body {
 /* Layout (containers, etc.) */
 
 header {
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10vh;
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    z-index: 10;
+    background-color: black;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='380' height='380' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23641A6F' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%2324A7A9'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+    /* Background by SVGBackgrounds.com */
+
+    animation: hidecontent 500ms linear 5s 1 forwards;
 }
 
 .body-container {
@@ -29,12 +39,13 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    animation: fade 3s ease-in 5s;
 }
 
 .new-vehicle-container,
 .old-vehicle-container {
     width: 20vw;
-    height: 80vh;
+    height: 600px;
     padding: 10px;
     border: 1px solid #f2eff470;
     border-radius: 25px;
@@ -44,7 +55,7 @@ header {
 .new-vehicle-body-container,
 .old-vehicle-body-container {
     width: 100%;
-    height: 70vh;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -53,7 +64,7 @@ header {
 
 .estimate-container {
     width: 45vw;
-    height: 80vh;
+    height: 600px;
     padding: 10px;
     border: 1px solid #f2eff470;
     border-radius: 25px;
@@ -111,8 +122,17 @@ h2 {
 }
 
 h1 {
-    font-size: 30px;
+    position: absolute;
+
+    font-size: 60px;
     margin: 0;
+    background: linear-gradient(to right, #a82cbb 0%, #24a7a9 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    pointer-events: none;
+    animation: fade 4s ease 1s;
+    opacity: 0;
 }
 
 h2 {
@@ -123,7 +143,9 @@ h2 {
 /* Input specific CSS */
 
 input,
-select, button, select option {
+select,
+button,
+select option {
     padding: 6px;
     border: 1px solid rgb(184, 184, 184);
     border-radius: 4px;
@@ -158,4 +180,34 @@ label {
 
 .inputnumber-block {
     display: inline-block;
+}
+
+/* KEYFRAMES */
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
+@keyframes hidecontent {
+    0% {
+        height: 0;
+        width: 0;
+    }
+
+    100% {
+        opacity: 0;
+        height: 0;
+        width: 0;
+    }
 }
