--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ header {
 .estimate-body-container {
     display: flex;
     width: 100%;
-    height: 70vh;
+    height: 500px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
