--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,9 @@ header {
     align-items: center;
 }
 
-.initial {
+.initial, .question-container {
+    display: flex;
+    align-items: center;
     height: 100%;
 }
 
@@ -155,6 +157,64 @@ strong {
 
 .money-strong {
     background: linear-gradient(transparent 0%, #a82cbb 25%, #a82cbb 75%, transparent 100%);
+}
+
+/* Tooltip */
+
+.question-tooltip {
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+}
+
+.question-tooltip .left {
+    min-width:200px; 
+    top:50%;
+    right:100%;
+    margin-right:20px;
+    transform:translate(0, -50%);
+    padding:10px 20px;
+    background-color:#f2eff4;
+    border-radius:8px;
+    position:absolute;
+    z-index:99999999;
+    box-sizing:border-box;
+    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    display:none;
+}
+
+.question-tooltip .left p {
+    color: #222222;
+}
+
+.question-tooltip:hover .left {
+    display: block;
+}
+
+.question-tooltip .left i {
+    position:absolute;
+    top:50%;
+    left:100%;
+    margin-top:-12px;
+    width:12px;
+    height:24px;
+    overflow:hidden;
+}
+
+.question-tooltip .left i::after {
+    content:'';
+    position:absolute;
+    width:12px;
+    height:12px;
+    left:0;
+    top:50%;
+    transform:translate(-50%,-50%) rotate(-45deg);
+    background-color:#f2eff4;
+    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+}
+
+.question {
+    font-size: 50px;
 }
 
 /* Input specific CSS */
