--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
 
 body {
     z-index: 1;
+    overflow: hidden;
     margin: 0;
     background-color: #f2eff4;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='380' height='380' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23641A6F' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%2324A7A9'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
     /* Background by SVGBackgrounds.com */
+    animation: overflow 3s linear 4s forwards;
 }
 
 /* Layout (containers, etc.) */
@@ -37,14 +39,17 @@ header {
 .body-container {
     margin: 20px 10px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    row-gap: 50px;
     animation: fade 3s ease-in 5s;
 }
 
 .new-vehicle-container,
 .old-vehicle-container {
-    width: 20vw;
+    max-width: 300px;
+    min-width: 270px;
     height: 600px;
     padding: 10px;
     border: 1px solid #f2eff470;
@@ -63,7 +68,7 @@ header {
 }
 
 .estimate-container {
-    width: 45vw;
+    min-width: 600px;
     height: 600px;
     padding: 10px;
     border: 1px solid #f2eff470;
@@ -83,11 +88,13 @@ header {
 .estimate-button-container {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 20px
 }
 
-.initial, .question-container {
+.initial,
+.question-container {
     display: flex;
     align-items: center;
     height: 100%;
@@ -113,8 +120,8 @@ header {
 
 .chart-container {
     margin: 0 auto;
-    width: 30vw;
-    height: 40vh;
+    width: 400px;
+    height: 300px;
 }
 
 .chart-responsive-container {
@@ -169,19 +176,19 @@ strong {
 }
 
 .question-tooltip .bottom {
-    min-width:400px; 
-    top:100%;
-    left:50%;
-    margin-right:20px;
-    transform:translate(-50%, 0%);
-    padding:10px 20px;
-    background-color:#f2eff4;
-    border-radius:8px;
-    position:absolute;
-    z-index:99999999;
-    box-sizing:border-box;
-    box-shadow:0 1px 8px rgba(0,0,0,0.5);
-    display:none;
+    min-width: 400px;
+    top: 100%;
+    left: 50%;
+    margin-right: 20px;
+    transform: translate(-50%, 0%);
+    padding: 10px 20px;
+    background-color: #f2eff4;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 99999999;
+    box-sizing: border-box;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
+    display: none;
 }
 
 .question-tooltip .bottom p {
@@ -189,29 +196,30 @@ strong {
     text-align: justify;
 }
 
-.question-tooltip:hover .bottom, .question-tooltip:active .bottom {
+.question-tooltip:hover .bottom,
+.question-tooltip:active .bottom {
     display: block;
 }
 
 .question-tooltip .bottom i {
-    position:absolute;
-    bottom:100%;
-    left:50%;
-    margin-left:-12px;
-    width:24px;
-    height:12px;
-    overflow:hidden;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -12px;
+    width: 24px;
+    height: 12px;
+    overflow: hidden;
 }
 
 .question-tooltip .bottom i::after {
-    content:'';
-    position:absolute;
-    width:12px;
-    height:12px;
-    left:50%;
-    transform:translate(-50%,50%) rotate(45deg);
-    background-color:#f2eff4;
-    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    left: 50%;
+    transform: translate(-50%, 50%) rotate(45deg);
+    background-color: #f2eff4;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
 }
 
 .question {
@@ -372,5 +380,81 @@ label {
         opacity: 0;
         height: 0;
         width: 0;
+    }
+}
+
+@keyframes overflow {
+    0% {
+        overflow-y: hidden;
+    }
+
+    100% {
+        overflow-y: visible;
+    }
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 768px) {
+    .estimate-container {
+        min-width: initial;
+        width: 90%;
+    }
+
+    .estimate-button-container {
+        flex-direction: column;
+        padding-bottom: 20px;
+    }
+
+    .question-tooltip .bottom {
+        min-width: 250px;
+        left: 50%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .chart-container {
+        width: 300px;
+        height: 250px;
+    }
+
+    .svg-container {
+        width: 100%;
+    }
+
+    .euro-svg {
+        margin-right: 20px;
+    }
+
+    .co2-img {
+        width: 100px;
+    }
+
+    .money-img {
+        width: 40px;
+    }
+
+    .svg p {
+        font-size: 12px;
+    }
+
+    .svg strong {
+        font-size: 14px;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    .estimate-container tspan,
+    .estimate-container span {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .chart-container {
+        width: 250px;
+        height: 225px;
     }
 }
